--- a/extension/css/content_script.css
+++ b/extension/css/content_script.css
@@ -57,4 +57,8 @@
 #quick-find-item-input {
 	padding: 3px;
 	border: 1px solid #444;
+	font-family: inherit;
+	font-size: inherit;
+	font-style: inherit;
+	font-weight: inherit;
 }
